# ViusaMetric

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hausdorff_error_evaluator.py
assets/optmodel/SM_Bp_Building01_C_1/: SM_Bp_Building01_C_1.gltf
assets/optmodel/SM_Bp_Building02_C_1/: SM_Bp_Building02_C_1.gltf
assets/optmodel/SM_Bp_Building03_C_1/: SM_Bp_Building03_C_1.gltf
assets/refmodel/SM_Bp_Building01_C_1/: SM_Bp_Building01_C_1.gltf
assets/refmodel/SM_Bp_Building02_C_1/: SM_Bp_Building02_C_1.gltf
assets/refmodel/SM_Bp_Building03_C_1/: SM_Bp_Building03_C_1.gltf
assets/shaders/ibl/: brdf.frag  equirectangular.frag  irradiance.frag  prefilter.frag
assets/shaders/metrics/: composite.frag  error_vis.frag  legend.frag  quad.vert  silhouette.frag  textures.frag
assets/shaders/pbr/: background.frag  background.vert  pbr.frag  pbr.vert
assets/shaders/visualize/: vis_model.frag  vis_model.vert
src/: main.cpp  pch.h
src/App/: Application.cpp  Application.h  BatchProcessor.cpp  BatchProcessor.h  Config.h
src/Core/: Application.cpp  Application.h  CameraSampler.cpp  CameraSampler.h  GeometryUtils.cpp  GeometryUtils.h  Mesh.h  MetricVisualizer.cpp  MetricVisualizer.h  Model.cpp  Model.h  PBRRenderer.cpp  PBRRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/Metrics/: Evaluator.cpp  Evaluator.h  ImageUtils.cpp  ImageUtils.h  MetricVisualizer.cpp  MetricVisualizer.h
src/Renderer/: IBLBaker.cpp  IBLBaker.h  PBRRenderer.cpp  PBRRenderer.h  Shader.cpp  Shader.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
src/Scene/: CameraSampler.cpp  CameraSampler.h  Mesh.h  Model.cpp  Model.h  Scene.h
src/Utils/: FileSystemUtils.h  GeometryUtils.cpp  GeometryUtils.h
